--- a/index.html
+++ b/index.html
@@ -1,1 +1,180 @@
 hi im atish
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Sweet Cravings Bakery</title>
+
+<style>
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+body {
+    background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+    color: #333;
+}
+
+header {
+    background: linear-gradient(90deg, #ff758c, #ff7eb3);
+    padding: 20px;
+    text-align: center;
+    color: white;
+}
+
+header h1 {
+    font-size: 2.8rem;
+    letter-spacing: 2px;
+}
+
+nav {
+    margin-top: 15px;
+}
+
+nav a {
+    text-decoration: none;
+    color: white;
+    margin: 0 15px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+nav a:hover {
+    color: #ffe066;
+}
+
+.hero {
+    text-align: center;
+    padding: 80px 20px;
+    color: white;
+}
+
+.hero h2 {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+}
+
+.hero p {
+    font-size: 1.2rem;
+    margin-bottom: 30px;
+}
+
+.hero button {
+    padding: 12px 25px;
+    border: none;
+    border-radius: 30px;
+    background: #ffe066;
+    color: #333;
+    font-weight: bold;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.hero button:hover {
+    background: #fff;
+}
+
+.section {
+    padding: 60px 20px;
+    text-align: center;
+    background: white;
+}
+
+.section h2 {
+    margin-bottom: 40px;
+    color: #ff758c;
+    font-size: 2rem;
+}
+
+.products {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+}
+
+.card {
+    background: linear-gradient(135deg, #fbc2eb, #a6c1ee);
+    padding: 20px;
+    width: 250px;
+    border-radius: 20px;
+    color: white;
+    transition: 0.4s;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+}
+
+.card:hover {
+    transform: translateY(-10px);
+}
+
+.card h3 {
+    margin-bottom: 10px;
+}
+
+.card p {
+    font-size: 0.9rem;
+}
+
+footer {
+    background: #ff758c;
+    text-align: center;
+    padding: 20px;
+    color: white;
+    margin-top: 40px;
+}
+</style>
+</head>
+
+<body>
+
+<header>
+    <h1>🍰 Sweet Cravings Bakery</h1>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Menu</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+    </nav>
+</header>
+
+<section class="hero">
+    <h2>Freshly Baked Happiness Everyday!</h2>
+    <p>Delicious cakes, cupcakes, pastries & more made with love ❤️</p>
+    <button>Order Now</button>
+</section>
+
+<section class="section">
+    <h2>Our Special Treats</h2>
+    <div class="products">
+        <div class="card">
+            <h3>🎂 Chocolate Cake</h3>
+            <p>Rich, moist and full of chocolate flavor.</p>
+        </div>
+
+        <div class="card">
+            <h3>🧁 Cupcakes</h3>
+            <p>Colorful, fluffy and topped with creamy frosting.</p>
+        </div>
+
+        <div class="card">
+            <h3>🥐 Croissants</h3>
+            <p>Golden, buttery and perfectly flaky.</p>
+        </div>
+
+        <div class="card">
+            <h3>🍩 Donuts</h3>
+            <p>Soft, sweet and glazed to perfection.</p>
+        </div>
+    </div>
+</section>
+
+<footer>
+    © 2026 Sweet Cravings Bakery | Made with ❤️
+</footer>
+
+</body>
+</html>
